--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+gender_homepage_visibility_db
